# Nyar-compiler

./: .gitignore  .gitmodules  BytecodeGCompile.sh  BytecodeGTest.sh  BytecodeRun.sh  BytecodeVM.sh  CMakeLists.txt  CompileNyar.sh  Docker.sh  Dockerfile  GrammarCompile.sh  Nyar  NyarLexer.g4  NyarParser.g4  VMGCompile.sh  VMGTest.sh  VMRun.sh  VMTest.sh  compile.sh  game.ae  notes.txt  run.sh  si.txt  test  test.ae  test.cpp
Bytecode/: main.cpp
Bytecode/Include/: SymbolTable.h
Bytecode/MLVM/: MLVM.cpp  MLVM.h
Bytecode/parser/: NyarLexer.cpp  NyarLexer.h
Bytecode/src/: SymbolTable.cpp
Bytecode/src/Include/: SymbolTable.cpp  SymbolTable.h
Bytecode/src/MLVM/: MLVM.cpp  MLVM.h  nyar_types.cpp  nyar_types.h
Bytecode/src/NyarSTD/: std_functions.cpp  std_functions.h
Bytecode/src/lib/: NyarLexer.cpp  NyarLexer.h  NyarLexer.interp  NyarParser.cpp  NyarParser.h  NyarParser.tokens  NyarParserBaseVisitor.cpp  NyarParserBaseVisitor.h  NyarParserVisitor.h
Bytecode/src/parser/: NyarLexer.cpp  NyarLexer.h  NyarLexer.interp  NyarLexer.tokens  NyarParser.cpp  NyarParser.h  NyarParser.interp  NyarParserBaseVisitor.cpp  NyarParserBaseVisitor.h  NyarParserVisitor.cpp  NyarParserVisitor.h
Bytecode/src/utils/: strfunctions.cpp  strfunctions.h
Bytecode/src/visitor/: NyarVisitor.cpp  NyarVisitor.h
Bytecode/visitor/: NyarVisitor.cpp  NyarVisitor.h
BytecodeGrammar/: NyarLexer.g4  NyarParser.g4
Grammar/: NyarParser.g4
Swift-Backend/: CMakeLists.txt  Package.resolved  Package.swift  swift.sh
Swift-Backend/Sources/Compiler/: main.swift
Swift-Backend/Sources/Swift-Backend/: init.swift
Swift-Backend/Sources/llvm/: llvm.h
VM/: CMakeLists.txt  Package.resolved  Package.swift  main.cpp  test.nya
VM/Grammar/: VMLexer.g4  VMParser.g4
VM/Sources/AntlrNya/: antlrnya.h  module.modulemap
VM/Sources/AntlrNya/include/lib/: VMLexer.cpp  VMLexer.interp  VMParser.cpp  VMParser.h  VMParser.interp  VMParserBaseVisitor.h  VMParserVisitor.h
VM/Sources/AntlrNya/lib/: VMLexer.swift  VMParser.swift  VMParserBaseVisitor.swift  VMParserVisitor.swift
VM/Sources/Compiler/: VMVisitor.swift  main.swift
VM/Sources/LLVM/: llvm.h  module.modulemap
VM/Sources/llvm/: module.modulemap
VM/lib/parser/: VMLexer.cpp  VMLexer.h  VMLexer.interp  VMLexer.tokens  VMParser.cpp  VMParser.h  VMParser.interp  VMParserBaseVisitor.cpp  VMParserBaseVisitor.h  VMParserVisitor.cpp  VMParserVisitor.h
VM/src/visitor/: DataStructures.cpp  FlowControls.cpp  Functions.cpp  Operations.cpp  Tools.cpp  Visitor.cpp  Visitor.h
VM/utils/: make-pkgconfig.swift  make-pkgconfigantlr.swift  make-pkgconfigllvm.swift
VMGrammar/: VMParser.g4
src/: main.cpp
src/lib/: NyarLexer.cpp  NyarLexer.h  NyarLexer.interp  NyarLexer.tokens  NyarParser.cpp  NyarParser.h  NyarParser.interp  NyarParserBaseVisitor.cpp  NyarParserBaseVisitor.h  NyarParserVisitor.cpp  NyarParserVisitor.h
src/visitor/: NyarVisitor.cpp  NyarVisitor.h
